force-app/main/default/objects/Tax_Info_Individual__c/Tax_Info_Individual__c.object-meta.xml
<CustomObject>
    <label>Tax-Info Individual</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax-Info Individual Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax-Info Individual</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>