force-app/main/default/objects/Tax_Info_Individual__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax-Info Individual</relationshipLabel>
    <relationshipName>Tax_Info_Individual</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>