force-app/main/default/objects/Tax_Info_Individual__c/fields/European__c.field-meta.xml
<CustomField>
    <fullName>European__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>European</label>
    <length>20</length>
    <type>Text</type>
</CustomField>