force-app/main/default/objects/Tax_Info_Individual__c/fields/US_Citizen__c.field-meta.xml
<CustomField>
    <fullName>US_Citizen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>US Citizen</label>
    <length>20</length>
    <type>Text</type>
</CustomField>