force-app/main/default/objects/Tax_Info_Individual__c/recordTypes/European.recordType-meta.xml
<RecordType>
    <fullName>European</fullName>
    <active>true</active>
    <label>European</label>
</RecordType>