force-app/main/default/objects/Tax_Info_Individual__c/recordTypes/US_Citizen.recordType-meta.xml
<RecordType>
    <fullName>US_Citizen</fullName>
    <active>true</active>
    <label>US Citizen</label>
</RecordType>